# med-prescription-parser

./: .gitignore  README.md  main.py  pyproject.toml
app/services/: llm_service.py  ocr_service.py
